--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Victoria">
         <meta name="keywords" content="HTML,CSS,SASS">
         <link rel="stylesheet" href="css/style.scss">
-        <link rel="stylesheet" href="css/style.css">
+        <!--<link rel="stylesheet" href="css/style.css">-->
         <title>SASS</title>
     </head>
 
@@ -16,6 +16,8 @@
             <header id="articleHeader">
                 <h1 id="h1">SASS for style</h1>
             </header>
+
+            <div id="box"> test </div>
 
             <h2 id="abstract"  role= "heading">Abstract</h1>
             <p>
