--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="author" content="Victoria">
         <meta name="keywords" content="HTML,CSS,SASS">
-        <link rel="stylesheet" href="css/style.scss">
+        <link rel="stylesheet" href="output.css">
         <!--<link rel="stylesheet" href="css/style.css">-->
         <title>SASS</title>
     </head>
